--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
 	"description": "boilerplate",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
-		"express": "^4.14.0",
-		"cors": "^2.8.1",
 		"body-parser": "^1.15.2",
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
-		"mongodb": "^3.6.2",
-		"zombie": "^5.0.5",
+		"cors": "^2.8.1",
+		"dotenv": "^8.2.0",
+		"express": "^4.14.0",
 		"mocha": "^3.2.0",
-		"dotenv": "^8.2.0"
+		"mongodb": "^3.6.2",
+		"mongoose": "^5.11.15",
+		"zombie": "^5.0.5"
 	},
-  "repository": {
+	"repository": {
 		"type": "git",
 		"url": "https://github.com/zm412/personalLib.git"
 	},
@@ -26,5 +27,8 @@
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^2.0.7"
+	}
 }
